@@ -1,3 +1,6 @@
+Version 2012062101 Thu Jun 21 19:32:50 CEST 2012
++ STRANGE made his first release.
+
 Version 2012052501 Fri May 25 22:36:53 CEST 2012
 + We lose some, we gain some.
 
